# params

./: CMakeLists.txt  invoke_cmake.sh  main.cpp
